--- a/RakSound.csproj
+++ b/RakSound.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
         <Resource Include="Assets\app.ico" />
         <PackageReference Include="NAudio" Version="2.2.1" />
+        <PackageReference Include="System.Speech" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
